[metadata]
name = sshdol
version = 0.0.7
url = https://github.com/i2mint/sshdol
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Easy dict-like access to server files
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = sshdol

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	py2store
	paramiko

